# devdox-ai-locust

./: Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  publish.yml
src/devdox_ai_locust/: __init__.py  cli.py  config.py  hybrid_loctus_generator.py  locust_generator.py
src/devdox_ai_locust/prompt/: domain.j2
src/devdox_ai_locust/schemas/: processing_result.py
src/devdox_ai_locust/utils/: file_creation.py  open_ai_parser.py  swagger_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_data.py  test_hybrid_loctus_generator.py  test_locust_generator.py
tests/schemas/: __init__.py  test_processing_result.py
tests/utils/: test_file_creation.py  test_open_ai_parser.py  test_swagger_utils.py
